# TygerMemory1

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TygerMemory.sln
Release/: TygerMemory.lib
TygerMemory/: HeroState.h  README.md  TygerMemory.vcxproj  TygerMemory.vcxproj.filters  animation.cpp  animation.h  boomerang.cpp  boomerang.h  camera.cpp  camera.h  camerastate.h  cheats.cpp  cheats.h  collectable.cpp  collectable.h  collision.h  colour.h  core.cpp  core.h  dllmain.cpp  event.h  gameobject.cpp  gameobject.h  gameobject_descriptor.cpp  gameobject_descriptor.h  gamestate.cpp  gamestate.h  goldencog.cpp  hero.cpp  hero.h  hooks.cpp  hooks.h  instance.cpp  instance.h  kromeIni.h  level.cpp  level.h  leveldata.cpp  leveldata.h  logging.cpp  (+27 more)
TygerMemory/source/: HeroState.h  hero_state.h  logging.cpp  logging.h
cmake/: CompileOptions.cmake  MinHook.cmake  SimpleGitVersion.cmake
cmake/toolchains/: clang-cl-xwin-x86.cmake  llvm-mingw-x86.cmake
scripts/: check-exports.sh
